--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Hangman</title>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	
@@ -24,13 +25,18 @@
 	</div>
 	</section>
 	<section id="game">
-		<div class="col-md-6 guessbox"></div>
-		<div class="col-md-6 hangman"></div>
+		<div class="col-md-6">
+			<canvas id="guessbox"></canvas>
+		</div>
+		<div class="col-md-6 hangman">
+			<canvas id="hangman"></canvas>
+		</div>
 	</section>
 	<section id="letters"></section>
 	<section id="game-controls"></section>
 	
 </div>
+<script src="js/hangman.js"></script>
 
 </body>
 </html>
