--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
 		<div class="col-md-6">
 			<canvas id="guessbox"></canvas>
 		</div>
-		<div class="col-md-6 hangman">
-			<canvas id="hangman"></canvas>
+		<div class="col-md-6">
+			<canvas id="hangman" width="300" height="500"></canvas>
 		</div>
 	</section>
 	<section id="letters"></section>
