--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,14 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
+	  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 <nav></nav>
 <header></header>
-<div class="container-fluid">
+<div class="container">
 	<section id="players">
 		<div class="row">
 		<div class="col-md-6">Player 1 <span>Score</span></div>
@@ -26,7 +28,8 @@
 	</section>
 	<section id="game">
 		<div class="col-md-6">
-			<canvas id="guessbox"></canvas>
+		<p id="guessbox"></p>
+		<!-- 	<canvas id=""></canvas> -->
 		</div>
 		<div class="col-md-6">
 			<canvas id="hangman" width="600" height="400"></canvas>
@@ -37,6 +40,7 @@
 	
 </div>
 <script src="js/hangman.js"></script>
+<script src="js/gameplay.js"></script>
 
 </body>
 </html>
