--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,42 @@
 			<canvas id="hangman" width="600" height="400"></canvas>
 		</div>
 	</section>
-	<section id="letters"></section>
+	<section id="letters">
+		<div class="row">
+			<div class="col-md-1 letter">A</div>
+			<div class="col-md-1 letter">B</div>
+			<div class="col-md-1 letter">C</div>
+			<div class="col-md-1 letter">D</div>
+			<div class="col-md-1 letter">E</div>
+			<div class="col-md-1 letter">F</div>
+			<div class="col-md-1 letter">G</div>
+			<div class="col-md-1 letter">H</div>
+			<div class="col-md-1 letter">I</div>
+			<div class="col-md-1 letter">J</div>
+			<div class="col-md-1 letter">K</div>
+			<div class="col-md-1 letter">L</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-1 letter">M</div>
+			<div class="col-md-1 letter">N</div>
+			<div class="col-md-1 letter">O</div>
+			<div class="col-md-1 letter">P</div>
+			<div class="col-md-1 letter">Q</div>
+			<div class="col-md-1 letter">R</div>
+			<div class="col-md-1 letter">S</div>
+			<div class="col-md-1 letter">T</div>
+			<div class="col-md-1 letter">U</div>
+			<div class="col-md-1 letter">V</div>
+			<div class="col-md-1 letter">W</div>
+			<div class="col-md-1 letter">X</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-1 letter">Y</div>
+			<div class="col-md-1 letter">Z</div>
+		</div>
+	</section>
 	<section id="game-controls"></section>
 	
 </div>
