--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
 <div class="container">
 	<section id="players">
 		<div class="row">
-		<div class="col-xs-6"> <button class="btn btn-success navbar-btn">Player <span>0</span></span></button><span id="user"></span></div>
-		<div class="col-xs-6"> <button class="btn btn-success navbar-btn">Computer <span>0</span></button><span id="computer"></span></div>
+		<div class="col-xs-6"> <button class="btn btn-success navbar-btn">Guess Remaining: <span id="remaining"></span></span></button></div>
+
 	</div>
 	</section>
 	<section id="game">
