--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,11 @@
 			<div class="row">
 			<div class="col-xs-6">
 		<p id="guessbox"></p>
+		<h2>Missed Letters</h2>
+		<p id="missed"></p>
 		</div>
 		<div class="col-xs-6">
+			<h1 id="results"></h1>
 			<canvas id="hangman" width="600" height="400"></canvas>
 		</div>
 				
