--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 			<div class="row">
 			<div class="col-xs-6">
 		<p id="guessbox"></p>
-		<h2>Missed Letters</h2>
+		<h2 id="displaymessage"></h2>
 		<p id="missed"></p>
 		</div>
 		<div class="col-xs-6">
