--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,14 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Hangman Challenge</a>
     </div>
-    <ul class="nav navbar-nav">
-      <li><a href="#">Rules</a></li>
-    </ul>
+  
     <button class="btn btn-danger navbar-btn" id="newgame"> New Game</button>
   </div>
 </nav>
-<header></header>
+<header>
+	<h1>Rules</h1>
+	<p>Click "New game" to get started. Once a user begins, you will have 6 guesses to fill in the blank and match the correct word. After you click "New Game", wait until a new set of dashes appear before you begin selecting letters.</p>
+</header>
 <div class="container">
 	<section id="players">
 		<div class="row">
