--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,10 @@
 	<h1>Rules</h1>
 	<p>Click "New game" to get started. Once a user begins, you will have 6 guesses to fill in the blank and match the correct word. After you click "New Game", wait until a new set of dashes appear before you begin selecting letters.</p>
 </header>
-<div class="container">
+<div class="container-fluid">
 	<section id="players">
 		<div class="row">
 		<div class="col-xs-6"> <button class="btn btn-success navbar-btn">Guess Remaining: <span id="remaining"></span></span></button></div>
-
 	</div>
 	</section>
 	<section id="game">
