--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,18 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Hangman Challenge</a>
     </div>
-  
+  	<select id="difficulty">
+  		<option value="1">1</option>
+  		<option value="2">2</option>
+  		<option value="3">3</option>
+  		<option value="4">4</option>
+  		<option value="5">5</option>
+  		<option value="6">6</option>
+  		<option value="7">7</option>
+  		<option value="8">8</option>
+  		<option value="9">9</option>
+  		<option value="10">10</option>
+  	</select>
     <button class="btn btn-danger navbar-btn" id="newgame"> New Game</button>
   </div>
 </nav>
